infrastructure/k8s/rabbitmq/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: autopilot-drone
spec:
  type: NodePort
  ports:
    - port: 5672
      targetPort: 5672
      name: amqp
      nodePort: 30007
    - port: 15672
      targetPort: 15672
      name: management
  selector:
    app: rabbitmq
