infrastructure/k8s/rabbitmq/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: rabbitmq
  namespace: autopilot-drone
spec:
  ingressClassName: nginx
  rules:
  - host: rabbitmq.pyxieportal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
  tls:
  - hosts:
    - pyxieportal.com
    secretName: letsencrypt-prod
